--- a/src/Styles/style.css
+++ b/src/Styles/style.css
@@ -51,6 +51,12 @@
     color: #00a48a;
 }
 
+#errorLogin {
+  font-size: 16px;
+  color: red;
+  display: none;
+}
+
 /* Menu start */ 
 .startmenu {
     display: flex;
@@ -62,6 +68,7 @@
 }
         a{
             color: #223334;
+            font-size: 1.5rem;
         }
         a:hover{
             color:#00a48a;
@@ -235,4 +242,11 @@ html {
   display: flex;
   flex-direction: column;
   text-align: center;
+}
+
+.logout{
+color: rgb(53 93 98);
+}
+.logout:hover{
+  color: #212529
 }
