--- a/src/Styles/style.css
+++ b/src/Styles/style.css
@@ -250,3 +250,19 @@ color: rgb(53 93 98);
 .logout:hover{
   color: #212529
 }
+
+
+/* MUI CUSTOM CSS */
+
+.MuiBox-root {
+  justify-content: center;
+}
+.css-vv34gr-MuiTableRow-root {
+  background-color: #223334;
+}
+
+tbody, td, tfoot, th, thead, tr {
+  border-color: inherit;
+  border-style: solid;
+  /* border-width: 0; */
+}
